[project]
name = "langgraph-agentic-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "dotenv>=0.9.9",
    "fastapi>=0.120.2",
    "fpdf>=1.7.2",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.0.42",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.2",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "playwright>=1.55.0",
    "pydantic>=2.12.3",
    "reportlab>=4.4.4",
    "sendgrid>=6.12.5",
    "uvicorn>=0.38.0",
    "wikipedia>=1.4.0",
]
